<resources>
    <string name="app_name">Ecorner</string>


    <!--LoginActivity-->
    <string name="account">"信箱"</string>
    <string name="password">"密碼"</string>
    <string name="login">"登入"</string>
    <string name="login_success">"登入成功"</string>
    <string name="email_empty">"信箱不得為空白"</string>
    <string name="email_format_error">"信箱格式錯誤"</string>
    <string name="password_empty">"密碼不得為空白"</string>
    <!--RegisteredActivity-->
    <string name="registered">"註冊"</string>
    <string name="name">"姓名"</string>
    <string name="confirm_password">"確認密碼"</string>
    <string name="phone">"手機號碼"</string>
    <string name="address">"地址"</string>
    <string name="confirm">"確認"</string>
    <string name="registered_success">"註冊成功"</string>
    <string name="name_empty">"姓名不得空白"</string>
    <string name="password_not_same">"密碼與確認密碼不一致"</string>
    <string name="phone_empty">"手機不得空白"</string>
    <string name="phone_format_error">"手機格式有誤"</string>
    <string name="address_empty">"地址不得空白"</string>
    <string name="confirm_password_empty">"確認密碼不得為空白"</string>

    <!--MainActivity-->
    <string name="exit_app">再按一次返回键退出APP</string>


    <!--Menu-->
    <string name="home">"首頁"</string>
    <string name="update">"上傳"</string>
    <string name="message">"訊息"</string>
    <string name="personal">"個人"</string>


    <!--HomeFragment-->
    <string name="search">"搜尋"</string>
    <string name="collection">"收藏"</string>
    <string name="class_type">"分類"</string>
    <string name="more">"更多 >"</string>
    <string name="child">"幼童"</string>
    <string name="travel">"旅遊"</string>
    <string name="hospital">"醫療"</string>
    <string name="electric">"3C用品"</string>
    <string name="game">"休閒娛樂"</string>
    <string name="amount">"$%s"</string>


    <!--ProfileFragment-->
    <string name="person">"個人資料"</string>
    <string name="collect">"我的收藏"</string>
    <string name="rent">"我的租賃"</string>
    <string name="setting">"我的設定"</string>
    <string name="about">"關於"</string>
    <string name="logout">"登出"</string>
    <string name="logout_success">"登出成功"</string>

    <!--UploadFragment-->
    <string name="commodity_name">"商品名稱："</string>
    <string name="commodity_type">"商品分類："</string>
    <string name="commodity_rent">"商品租金："</string>
    <string name="commodity_deposit">"商品押金："</string>
    <string name="commodity_description">"商品描述："</string>
    <string name="commodity_address">"租借地址："</string>


    <!--CommodityDetailFragment-->
    <string name="commodity_detail">"商品詳細"</string>
    <string name="apply_rent">"申請租借"</string>
    <string name="rent_amount">"商品價格"</string>
    <string name="rent_deposit">"商品押金"</string>
    <string name="send_method">"配送方式："</string>
    <string name="pay_method">"付款方式："</string>
    <string name="apply_time">"租借時間："</string>


    <!--MessageFragment-->
    <string name="message_notify">訊息通知</string>

    <string-array name="bank_code">
        <item>004 臺灣銀行</item>
        <item>005 土地銀行 </item>
        <item>006 合庫商銀</item>
        <item>007 第一銀行</item>
        <item>008 華南銀行</item>
        <item>009 彰化銀行</item>
        <item>011 上海銀行 </item>
        <item>012 台北富邦</item>
        <item>013 國泰世華</item>
        <item>016 高雄銀行</item>
        <item>017 兆豐商銀</item>
        <item>018 農業金庫 </item>
        <item>021 花旗(台灣)銀行</item>
        <item>025 首都銀行</item>
        <item>039 澳商澳盛銀行(荷蘭銀行)</item>
        <item>040 中華開發</item>
        <item>050 臺灣企銀 </item>
        <item>052 渣打國際商銀(新竹銀行)</item>
        <item>053 台中商銀</item>
        <item>054 京城商銀</item>

        <item>072 德意志銀行</item>
        <item>075 東亞銀行</item>
        <item>081 永豐銀行</item>
        <item>101 大台北銀行 </item>
        <item>102 華泰銀行</item>
        <item>103 臺灣新光商銀</item>
        <item>108 陽信銀行</item>

        <item>118 板信銀行</item>
        <item>147 三信銀行</item>
        <item>803 聯邦銀行</item>
        <item>805 遠東銀行 </item>
        <item>806 元大銀行</item>
        <item>807 永豐銀行</item>
        <item>808 玉山銀行</item>

        <item>809 凱基銀行(萬泰銀行)</item>
        <item>810 星展銀行(寶華商業銀行)</item>
        <item>812 台新銀行</item>
        <item>814 大眾銀行 </item>
        <item>815 日盛銀行</item>
        <item>816 安泰銀行</item>
        <item>822 中國信託</item>

        <item> 700 中華郵政</item>
        <item> 104 台北五信</item>
        <item> 106 台北九信</item>
        <item> 114 基隆一信</item>
        <item> 115 基隆二信</item>
        <item> 119 淡水一信</item>
        <item> 120 淡水信合社</item>
        <item> 124 宜蘭信合社</item>
        <item> 127 桃園信合社</item>
        <item> 130 新竹一信</item>
        <item> 132 新竹三信</item>
        <item> 139 竹南信合社</item>
        <item> 146 台中二信</item>
        <item> 158 彰化一信</item>
        <item> 161 彰化五信</item>
        <item> 162 彰化六信</item>
    </string-array>


</resources>
